# Snake

./: .gitignore  CMakeLists.txt  README.md  snake.cpp  snake.hpp  snakeTest.cpp  test.cpp
Textures/: Food.xcf  Head.xcf  body.xcf  texture.json  textures.json  tile.xcf
src/: snake.cpp  snake.hpp  snakeTest.cpp  test.cpp
